Add testimonials section and enhance navigation with animations

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>BoldCreatives - Innovative Agency</title>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
     <header>
@@ -16,6 +17,7 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#about">About</a></li>
+                    <li><a href="#testimonials">Testimonials</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -76,6 +78,47 @@
         </div>
     </section>
 
+    <section id="testimonials" class="testimonials">
+        <div class="container">
+            <h2>What Clients Say</h2>
+            <div class="testimonial-grid">
+                <div class="testimonial-item">
+                    <div class="quote-icon"><i class="fas fa-quote-left"></i></div>
+                    <p>"BoldCreatives transformed our brand with a vision we never thought possible. Their creativity is unmatched!"</p>
+                    <div class="client-info">
+                        <img src="https://picsum.photos/seed/client1/100/100" alt="Client 1">
+                        <div>
+                            <h4>Jessica M.</h4>
+                            <span>CEO, TechStart</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial-item">
+                    <div class="quote-icon"><i class="fas fa-quote-left"></i></div>
+                    <p>"Working with BoldCreatives was a game-changer. Their designs brought our products to life."</p>
+                    <div class="client-info">
+                        <img src="https://picsum.photos/seed/client2/100/100" alt="Client 2">
+                        <div>
+                            <h4>Michael T.</h4>
+                            <span>Marketing Director, Innovate Inc.</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial-item">
+                    <div class="quote-icon"><i class="fas fa-quote-left"></i></div>
+                    <p>"Their attention to detail and innovative approach made our campaign a massive success."</p>
+                    <div class="client-info">
+                        <img src="https://picsum.photos/seed/client3/100/100" alt="Client 3">
+                        <div>
+                            <h4>Sarah L.</h4>
+                            <span>Founder, EcoBrand</span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="contact" class="contact">
         <div class="container">
             <h2>Let's Collaborate</h2>
@@ -92,9 +135,9 @@
         <div class="container">
             <p>&copy; 2025 BoldCreatives. All rights reserved.</p>
             <div class="social-links">
-                <a href="#">Instagram</a>
-                <a href="#">Behance</a>
-                <a href="#">Dribbble</a>
+                <a href="#"><i class="fab fa-instagram"></i> Instagram</a>
+                <a href="#"><i class="fab fa-behance"></i> Behance</a>
+                <a href="#"><i class="fab fa-dribbble"></i> Dribbble</a>
             </div>
         </div>
     </footer>
